--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,8 @@
                 <version>${openliberty.version}</version>
                 <type>zip</type>
               </assemblyArtifact>-->
+              <!-- Check out a daily build from open liberty https://openliberty.io/downloads/#development_builds and add to your local file system-->
+              
               <assemblyArchive>/Users/emily/conferences/repo/openliberty-all-19.0.0.9-cl190920190827-1310.zip</assemblyArchive>
               <configFile>src/main/liberty/config/server.xml</configFile>
               <appArchive>${project.build.directory}/${project.artifactId}.war</appArchive>
