--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
   <properties>
-    <openliberty.maven.version>3.0.M1</openliberty.maven.version>
+    <openliberty.maven.version>3.1</openliberty.maven.version>
     <failOnMissingWebXml>false</failOnMissingWebXml>
-    <openliberty.version>19.0.0.9</openliberty.version>
+    <openliberty.version>[19.0.0.9,)</openliberty.version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
@@ -91,11 +91,9 @@
         <activeByDefault>true</activeByDefault>
       </activation>
       <build>
-        <finalName>${project.artifactId}</finalName>
         <plugins>
           <plugin>
-            <groupId>net.wasdev.wlp.maven.plugins</groupId>
-            <!--<groupId>io.openliberty.tools</groupId>-->
+            <groupId>io.openliberty.tools</groupId>
             <artifactId>liberty-maven-plugin</artifactId>
             <version>${openliberty.maven.version}</version>
             <executions>
@@ -103,9 +101,10 @@
                 <id>package-server</id>
                 <phase>package</phase>
                 <goals>
-                  <goal>create-server</goal>
-                  <goal>install-apps</goal>
-                  <goal>package-server</goal>
+                  <goal>create</goal>
+                  <goal>install-feature</goal>
+                  <goal>deploy</goal>
+                  <goal>package</goal>
                 </goals>
                 <configuration>
                   <outputDirectory>target/wlp-package</outputDirectory>
@@ -113,31 +112,17 @@
               </execution>
             </executions>
             <configuration>
-              <assemblyArtifact>
-                <groupId>io.openliberty</groupId>
-                <artifactId>openliberty-runtime</artifactId>
-                <version>${openliberty.version}</version>
-                <type>zip</type>
-              </assemblyArtifact>
-              <configFile>src/main/liberty/config/server.xml</configFile>
-              <appArchive>${project.build.directory}/${project.artifactId}.war</appArchive>
-              <packageFile>${project.build.directory}/${project.artifactId}.jar</packageFile>
+              <appArchive>${project.build.directory}/${final.name}.war</appArchive>
               <include>runnable</include>
-              <serverName>${project.artifactId}</serverName>
-              <installAppPackages>project</installAppPackages>
-              <configDirectory>${project.basedir}/src/main/liberty/config</configDirectory>
+              <serverName>${final.name}</serverName>
               <bootstrapProperties>
-                <project.name>${project.artifactId}</project.name>
+                <project.name>${final.name}</project.name>
                 <jwt.issuer>https://server.example.com</jwt.issuer>
               </bootstrapProperties>
             </configuration>
           </plugin>
         </plugins>
       </build>
-      <properties>
-        <httpsPort>8543</httpsPort>
-        <httpPort>8181</httpPort>
-      </properties>
     </profile>
   </profiles>
 </project>
