--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -12,7 +12,7 @@ com.example.demo.client.Service/mp-rest/url=http://localhost:8281/b/service
 #mp.messaging.incoming.output.value.deserializer=io.vertx.kafka.client.serialization.JsonObjectDeserializer
 
 mp.messaging.outgoing.initial-prices.connector=liberty-kafka
-mp.messaging.outgoing.initial-prices.topic=topic1
+mp.messaging.outgoing.initial-prices.topic=price
 
 # These properties are general kafka producer config properties. A full list is here: https://kafka.apache.org/documentation/#consumerconfigs
 mp.messaging.outgoing.initial-prices.key.serializer=org.apache.kafka.common.serialization.IntegerSerializer
@@ -20,8 +20,8 @@ mp.messaging.outgoing.initial-prices.value.serializer=org.apache.kafka.common.se
 
  
 # Common config
-mp.messaging.connector.liberty-kafka.bootstrap.servers=broker-2-4c8ybp4dmv6hr1j7.kafka.svc01.us-south.eventstreams.cloud.ibm.com:9093, broker-4-4c8ybp4dmv6hr1j7.kafka.svc01.us-south.eventstreams.cloud.ibm.com:9093, broker-3-4c8ybp4dmv6hr1j7.kafka.svc01.us-south.eventstreams.cloud.ibm.com:9093, broker-1-4c8ybp4dmv6hr1j7.kafka.svc01.us-south.eventstreams.cloud.ibm.com:9093, broker-0-4c8ybp4dmv6hr1j7.kafka.svc01.us-south.eventstreams.cloud.ibm.com:9093, broker-5-4c8ybp4dmv6hr1j7.kafka.svc01.us-south.eventstreams.cloud.ibm.com:9093
+mp.messaging.connector.liberty-kafka.bootstrap.servers=broker-3-4c8ybp4dmv6hr1j7.kafka.svc01.us-south.eventstreams.cloud.ibm.com:9093,broker-5-4c8ybp4dmv6hr1j7.kafka.svc01.us-south.eventstreams.cloud.ibm.com:9093,broker-4-4c8ybp4dmv6hr1j7.kafka.svc01.us-south.eventstreams.cloud.ibm.com:9093,broker-2-4c8ybp4dmv6hr1j7.kafka.svc01.us-south.eventstreams.cloud.ibm.com:9093,broker-0-4c8ybp4dmv6hr1j7.kafka.svc01.us-south.eventstreams.cloud.ibm.com:9093,broker-1-4c8ybp4dmv6hr1j7.kafka.svc01.us-south.eventstreams.cloud.ibm.com:9093
 mp.messaging.connector.liberty-kafka.security.protocol=SASL_SSL
 mp.messaging.connector.liberty-kafka.ssl.protocol=TLSv1.2
-mp.messaging.connector.liberty-kafka.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="token" password="IuVbVm_GI2JKoh8AzKhsTKOkPY0IGhKDFxu3vOnblH7p";
+mp.messaging.connector.liberty-kafka.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="token" password="rYxWIG7cAXn7NPFEqpFt9VZCwvvC3U6apNB4FZlg-hQu";
 mp.messaging.connector.liberty-kafka.sasl.mechanism=PLAIN
