--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -23,5 +23,5 @@ mp.messaging.outgoing.initial-prices.value.serializer=org.apache.kafka.common.se
 mp.messaging.connector.liberty-kafka.bootstrap.servers=broker-3-4c8ybp4dmv6hr1j7.kafka.svc01.us-south.eventstreams.cloud.ibm.com:9093,broker-5-4c8ybp4dmv6hr1j7.kafka.svc01.us-south.eventstreams.cloud.ibm.com:9093,broker-4-4c8ybp4dmv6hr1j7.kafka.svc01.us-south.eventstreams.cloud.ibm.com:9093,broker-2-4c8ybp4dmv6hr1j7.kafka.svc01.us-south.eventstreams.cloud.ibm.com:9093,broker-0-4c8ybp4dmv6hr1j7.kafka.svc01.us-south.eventstreams.cloud.ibm.com:9093,broker-1-4c8ybp4dmv6hr1j7.kafka.svc01.us-south.eventstreams.cloud.ibm.com:9093
 mp.messaging.connector.liberty-kafka.security.protocol=SASL_SSL
 mp.messaging.connector.liberty-kafka.ssl.protocol=TLSv1.2
-mp.messaging.connector.liberty-kafka.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="token" password="rYxWIG7cAXn7NPFEqpFt9VZCwvvC3U6apNB4FZlg-hQu";
+mp.messaging.connector.liberty-kafka.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="token" password="inject your pwd";
 mp.messaging.connector.liberty-kafka.sasl.mechanism=PLAIN
